--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,20 @@
+
 .App {
   text-align: center;
+  height: 100%;
+ 
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.card-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 50px;
+}
+.card img {
+  width: 200px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -23,6 +33,49 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.nav-links ul {
+  list-style-type: none;
+  margin: 20px;
+  padding: 20px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  
+}
+
+.nav-links ul li a {
+  
+  background-color: rgb(0, 21, 255);
+  color: white;
+  padding: 2em 1.5em;
+  text-decoration: none;
+
+  
+}
+.nav-links ul li a:hover {
+  
+ background-color: brown;
+
+  
+}
+
+.card, .form-container > form {
+  padding: 30px;
+  background-color: #FFFFFF;
+  border: 0.5px solid rgb(245, 110, 110);
+  border-radius: 20px;
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+course-details, .form-container {
+  padding: 10px 30%;
+}
+.form-container > form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .App-link {
   color: #61dafb;
@@ -35,4 +88,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+button {
+  background-color: rgb(0, 21, 255);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
