--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,27 +7,32 @@
     align-items: center;
 }
 .form-container{
-
   padding: 10% 30%;
-
+  width: 100vw;
+  position: relative;
 }
 .form-container form {
 padding: 30px;
     border: 1px solid;
-    border-color: rgb(245,110,110);
+    border-color: #56b12f;
     border-radius: 20px;
     box-shadow: 0 16px 24px 2px rgb(0 0 0 / 14%), 0 6px 30px 5px rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 20%);
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap:2rem;
+    position:absolute;
+    top:auto
+
 }
+
 
 .create-course-input {
   margin-left: 20px;
   height: 40px;
-    border-radius: 5px;
+  border-radius: 5px;
 }
 .home-main h3 {
-  padding-top: 5rem;
+  /* padding-top: 6rem; */
   text-align: center;
 }
