--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@
   position: relative;
 }
 .form-container form {
-padding: 30px;
+    padding: 30px;
     border: 1px solid;
     border-color: #56b12f;
     border-radius: 20px;
@@ -22,11 +22,14 @@ padding: 30px;
     align-items: center;
     gap:2rem;
     position:absolute;
-    top:auto
+    top:100px
 
 }
 
-
+.form-lesson form {
+ 
+  top: -5px;
+}
 .create-course-input {
   margin-left: 20px;
   height: 40px;
